Initial check-in

--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,10 @@
 .cache/
 .history/
 .lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+target/*
+project/project/*
+project/target/*
 
 # Scala-IDE specific
-.scala_dependencies
-.worksheet
+.idea
+out/*
