Added storage and access patterns metrics

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@ monitor.mbean: {
     # In this example, MongoDB metrics are exposed as a MBean with name mongodb01 via JMX
     mongodb01: {
       # For URI format, see http://api.mongodb.org/java/2.9.1/com/mongodb/MongoURI.html
-      uri = "mongodb://u12x64os-pv010.pd.local:27017"
+      uri = "mongodb://localhost:27017"
       # Number of seconds to cache the metrics
       cacheTime = 180
     }
@@ -27,10 +27,10 @@ monitor.mbean: {
 
   postgresql: {
     pgsql01: {
-      host = "u12x64os-pv013.pd.local"
+      host = "localhost"
 		  port = "5432"
-		  username = "connect"
-		  password = "connect"
+		  username = "postgres"
+		  password = "postgres"
 		  cacheTime = 180
 		  db = "postgres"
     }
@@ -38,7 +38,7 @@ monitor.mbean: {
 
   redis: {
     redis01: {
-      host = "u12x64os-pv014.pd.local"
+      host = "localhost"
       port = "6379"
       cacheTime = 180
     }
@@ -51,7 +51,7 @@ monitor.mbean: {
 
   elasticsearch: {
     es01: {
-      url = "http://u12x64os-pv030.pd.local:9200/folklor"
+      url = "http://localhost:9200/folklor"
       cacheTime = 180
     }
     es02: {
